--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,6 +18,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        ports:
+          - 5432/tcp
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
