--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -20,18 +20,21 @@ jobs:
 
     services:
       postgres:
+        image: postgres:11.6-alpine
         ports:
-          - 5432/tcp
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
-    # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-    # change this to (see https://github.com/ruby/setup-ruby#versioning):
-    # uses: ruby/setup-ruby@v1
       uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
       with:
         ruby-version: 2.6.2
+    - name: Install required apt packages
+      run: |
+        sudo apt-get -y install libpq-dev
     - name: Install dependencies
       run: bundle install
     - name: Run tests
