--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,36 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/tanookie-bakery
+    working_directory: ~/flowspace-bakery
     docker:
       - image: ruby:2.6.2
         environment:
-          DATABASE_URL: postgresql://ubuntu@localhost/tanookie-bakery_test?sslmode=disable
+          DATABASE_URL: postgresql://ubuntu@localhost/flowspace-bakery_test?sslmode=disable
           RAILS_ENV: test
           RACK_ENV: test
       - image: postgres:9.6.2
         environment:
           POSTGRES_USER: ubuntu
-          POSTGRES_DB: tanookie-bakery_test
+          POSTGRES_DB: flowspace-bakery_test
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
       - restore_cache:
           keys:
-          - tanookie-bakery-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
-          - tanookie-bakery-master-{{ checksum "Gemfile.lock" }}
+          - flowspace-bakery-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
+          - flowspace-bakery-master-{{ checksum "Gemfile.lock" }}
+      - run:
+          name: install nodejs and npm
+          command: |
+            curl -sSL "https://nodejs.org/dist/v12.18.4/node-v12.18.4-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v11.10.0-linux-x64/bin/node
+            curl https://www.npmjs.com/install.sh | sudo bash
       - run:
           name: bundle install
           command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
       - save_cache:
-          key: tanookie-bakery-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
+          key: flowspace-bakery-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           paths:
-            - "~/tanookie-bakery/vendor/bundle"
+            - "~/flowspace-bakery/vendor/bundle"
       - run:
           name: set up database
           command: bundle exec rake db:create db:schema:load --trace
